<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello, World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_name">Username</string>
    <string name="password">Password</string>
    <string name="What_do">What does this do?</string>
    <string name="ok">Ok</string>
    <string name="dialog_message">Would you like to return to the main screen?</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Return to main</string>
    <string name="start_chat">Start Chat</string>
    <string name="send">Send</string>
    <string name="choice_1">Choice 1</string>
    <string name="choice_2">Choice 2</string>
    <string name="choice_3">Choice 3</string>
    <string name="test_toolbar">Test Toolbar</string>
    <string name="go_back">Do you want to go back?</string>

    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_message">New Message</string>

</resources>