<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_1"
        android:title="@string/choice_1"
        android:icon="@drawable/bottle24px"
        android:orderInCategory="101"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_2"
        android:title="@string/choice_2"
        android:icon="@drawable/beer24px"
        android:orderInCategory="102"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_3"
        android:title="@string/choice_3"
        android:icon="@drawable/coffee24px"
        android:orderInCategory="103"
        app:showAsAction="always"
        />

    <item android:id="@+id/action_4"
        android:title="About"
        app:showAsAction="never"
        />
</menu>